ticketing/infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
      - name: auth-mongo
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
---
kind: Service
apiVersion: v1
metadata:
  name:  auth-mongo-srv
spec:
  selector:
    app:  auth-mongo
  ports:
  - name:  auth-mongo
    protocol: TCP
    port:  27017
    targetPort:  27017
