ticketing/infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
      - name: expiration-redis
        image: redis
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        # ports:
        # - containerPort: 27017
---
kind: Service
apiVersion: v1
metadata:
  name: expiration-redis-srv
spec:
  selector:
    app: expiration-redis
  ports:
  - name: redis-db
    protocol: TCP
    port:  6379
    targetPort:  6379
