ticketing/infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      containers:
      - name: orders-mongo
        image: mongo
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        # ports:
        # - containerPort: 27017
---
kind: Service
apiVersion: v1
metadata:
  name: orders-mongo-srv
spec:
  selector:
    app: orders-mongo
  ports:
  - name: mongo-db
    protocol: TCP
    port:  27017
    targetPort:  27017
