ticketing/infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-depl
spec:
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
      - name: tickets-mongo
        image: mongo
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        # ports:
        # - containerPort: 27017
---
kind: Service
apiVersion: v1
metadata:
  name:  tickets-mongo-srv
spec:
  selector:
    app:  tickets-mongo
  ports:
  - name:  tickets-mongo
    protocol: TCP
    port:  27017
    targetPort:  27017
